--- a/src/scss/common/commonElements.scss
+++ b/src/scss/common/commonElements.scss
@@ -31,6 +31,7 @@
 
 #button {
     padding: $padding-button;
+    border: 2px solid #fff;
 }
 
 .footer {
