--- a/src/scss/pages/home.scss
+++ b/src/scss/pages/home.scss
@@ -19,12 +19,12 @@
 
 .shortTitle {
     width: 36rem;
-    margin-bottom: -1.5rem;
+    margin-bottom: 1.5rem;
 }
 
 .mediumTitle {
     width: 41rem;
-    margin-bottom: -1.5rem;
+    margin-bottom: 1.5rem;
 }
 
 //media queries
